--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "tailwindcss": "^1.0.4",
         "vue": "^2.5.21",
         "vue-template-compiler": "^2.5.21"
+    },
+    "dependencies": {
+        "vue-toast-notification": "^0.4.0"
     }
 }
